deployments/romm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: romm-service
  namespace: romm
spec:
  selector:
    app: romm
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080 
  type: ClusterIP
