deployments/romm/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: romm-headers
  namespace: romm
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Host: romm.local.tigovanroy.space
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm-ingress
  namespace: romm
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`romm.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: romm-service
          port: 80
      middlewares:
        - name: romm-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
